# caerostris-db

./: .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PR.md  README.md  RUNBOOK.md  deny.toml  flake.nix  format_code.sh  rust-toolchain.toml
.claude/agents/: adversarial-reviewer.md  dataset-scout.md  docs-memory-curator.md  formal-prover.md  implementer.md  integrator.md  pace-marshal.md  perf-engineer.md  planner-decomposer.md  premortem-analyst.md  researcher.md  rubric-grader.md  steering-distributed-acid.md  steering-formal-methods.md  steering-perf-sla.md  steering-query-cypher.md  steering-storage.md  test-author.md
.claude/commands/: launch.md
.claude/workflows/: mainspring.js
.github/workflows/: ci.yml
.project/: PACE_ALARMS.md
.project/board/: README.md
.project/decisions/: 0001-latency-budget-intra-phase-tail.md  0001-storage-domain-ratification-findings.md  0004-distributed-acid-ratification-findings.md  0005-latency-budget-intra-phase-tail.md  0007-tck-side-effect-observability.md  0008-tck-passrate-definition-and-pinning.md  0009-planner-stats-and-tail-fanout-bound.md  0010-perf-sla-ratification-pass.md  0011-board-decomposition-of-all-epics.md  0012-cargo-llvm-cov-coverage-tooling.md  0012-spike-0001-steering-signoff-request.md  0012-spike-0005-steering-sign-off-request.md  0012-spike-0006-pin-l-p99-and-r.md  0012-tck-side-effect-counting-semantics.md  0013-commit-protocol-steering-ratification-request.md  0013-tck-scenario-outline-expansion-gap.md  0014-formal-methods-spike-0005-0002-ratification.md  0015-formal-methods-spike-0001-ratification.md  0016-spike-0009-server-protocol-signoff-request.md  0017-perf-sla-spike-0001-ratification.md  0017-spike-0009-server-protocol-ratification.md  0023-distributed-acid-spike-0005-primary-verdict-and-bc4.md  0024-bug-0010-adr-renumber-cold-start-benchmark.md  0024-formal-methods-spike-0002-changes-requested-da1-model-blind.md  0026-distributed-acid-spike-0002-primary-ratification.md  0027-storage-domain-signoff-spike-0002-commit-protocol.md  0028-bug-0012-da1-model-fix-steering-reconfirm-request.md  0029-formal-methods-bug-0012-spike-0002-v2-model-reconfirm-ratified.md  0030-spike-0004-statistics-contract-signoff-request.md  0031-bug-0010-adr-renumber-collision-signoff-request.md  0032-optional-cache-wrapper-config-interface.md  0032-storage-domain-spike-0003-storage-format-ratification.md  0033-perf-sla-spike-0004-statistics-contract-ratification.md  0034-bug-0017-generation-fenced-cache-carries-module.md  0034-t-0008-adjacency-trailer-checksum-dep-free.md  0034-tck-pin-reconciliation-2024-3-canonical.md  0034-unicode-3-0-approved-license.md
.project/epochs/: README.md
.project/pace/: deadline.md
.project/reports/: coverage-T+03-15.md  dashboard-20260613T214931Z.md  perf-sim-T+04-15.md  rubric-T+00-22.md  rubric-T+00-37.md  rubric-T+01-22.md  rubric-T+01-38.md  rubric-T+02-00.md  rubric-T+02-16.md  rubric-T+02-42.md  rubric-T+03-02.md  rubric-T+03-18.md  rubric-T+03-37.md  rubric-T+03-58.md  rubric-T+04-19.md  rubric-T+04-36.md  tck-T+02-30.md  tck-results-latest.json
benches/: cache_warm_read.rs
claude-session-logs/: implementation-session-log.md  setup-session-log.md
docs/: DEMO.md  commanders-intent.md
docs/adr/: 0000-template.md  0001-cold-start-benchmark-protocol.md  0001-latency-selectivity-envelope.md  0002-s3-commit-protocol.md  0003-server-mode-network-protocol.md  0004-cold-start-benchmark-protocol.md  0004-pluggable-index-interface.md  0004-python-bindings-pyo3-maturin.md  0005-pluggable-index-interface.md  0006-python-bindings-pyo3-maturin.md  0008-storage-format.md  0009-optional-resource-aware-cache.md  README.md
docs/licenses/: README.md  manifest.toml
docs/process/: adversarial-review-loops.md  autonomous-operating-model.md  ci-grader-inputs.md  datasets.md  epoch-recycling.md  formal-verification-policy.md  memory-and-docs-policy.md  open-source-guardrails.md  parallel-execution-and-environment.md  release-hourlies.md  simulated-pr-workflow.md  steering-committee.md  task-board-protocol.md  testing-and-benchmarks.md
docs/requirements/: core-requirements.md  master-rubric.md
docs/specs/: SPIKE-0004-manifest-statistics-contract.md  SPIKE-0005-commit-protocol-pre-ratification-constraints.md  SPIKE-0006-l-p99-and-per-hop-round-trip-bound.md  SPIKE-0008-storage-falsification-constraints.md
examples/: demo.rs
formal/: .gitignore
formal/commit-protocol/: README.md  check.sh  commit_protocol.cfg  commit_protocol.tla  commit_protocol_liveness.cfg  commit_protocol_probes.cfg
formal/latency-sim/: Cargo.toml  README.md
formal/latency-sim/src/: lib.rs  main.rs
formal/latency-sim/tests/: envelope.rs
formal/results/: commit_protocol_check.txt
python/: Cargo.toml  README.md  deny.toml  pyproject.toml  ruff.toml
python/src/: lib.rs
python/tests/: test_smoke.py
scripts/: demo-minio.sh  demo.sh  release-hourly.sh
scripts/board/: checkpoint.sh  claim.sh  dashboard.sh  epoch-handoff.sh  ls.sh  new-task.sh  unblock.sh
scripts/ci/: grader-inputs.sh  grader-inputs.test.sh
scripts/env/: bucket.sh  down.sh  up.sh
scripts/pr/: land.sh  open.sh
scripts/tck/: fetch.sh
src/: cli.rs  lib.rs  licenses.rs  main.rs  tck.rs
src/cypher/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/dataset/: cli.rs  generator.rs  io.rs  mod.rs  rng.rs
src/demo/: executor.rs  mod.rs  persist.rs  store.rs
src/engine/: mod.rs
src/index/: hash.rs  hash_tests.rs  mod.rs  tests.rs
src/model/: edge.rs  mod.rs  node.rs  (+2 more)
tck-runner/: Cargo.toml
tck-runner/src/: engine.rs  lib.rs  main.rs  outline.rs  report.rs  runner.rs  scenario.rs
tck-runner/tests/: cli.rs  vendored_corpus.rs
tests/: adjacency_storage.rs  cache_integration.rs  ci_grader_inputs.rs  dataset_sample.rs  harness_checkpoint.rs  harness_ci_wiring.rs  harness_dashboard.rs  harness_epoch_handoff.rs  license_manifest.rs  manifest_resolution.rs  ncol_columnar_read.rs  repo_hygiene.rs  s3_minio_integration.rs  tck_passrate_contract.rs  tck_side_effects.rs
(+119 files in other folders)
