[workspace]
members = ["tck-runner"]
# `python/` and `formal/latency-sim` are intentionally NOT members: each is its
# own `[workspace]` with its own Cargo.lock so their dependency trees (PyO3 for
# python; the latency-sim crates) stay out of the engine's lockfile, license
# graph, and cold-start build. They are linted/tested explicitly in
# `format_code.sh` and CI. See docs/adr/0004-python-bindings-pyo3-maturin.md.
resolver = "2"

# Dependencies shared across workspace crates are declared here once and
# referenced with `<dep>.workspace = true` so versions stay consistent.
[workspace.dependencies]
gherkin = { version = "0.16", default-features = false, features = ["parser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "caerostris-db"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "A graph database engine backed by commodity durable object storage"
license = "MIT"
repository = "https://github.com/caerostris/caerostris-db"
readme = "README.md"
keywords = ["database", "graph", "object-storage", "s3"]
categories = ["database-implementations"]

[dependencies]
# Serde derive for the logical graph model (T-0006): downstream storage/query
# layers serialise these types in tests without depending on the on-object
# byte format. License-clean (MIT OR Apache-2.0; already recorded in the license
# manifest via the tck-runner) and already resolved in Cargo.lock.
serde.workspace = true
# JSONL serialisation for the synthetic dataset generator's portable output
# (T-0035, src/dataset/io.rs) — the format benches/tests load until the
# on-object storage writers exist. License-clean (MIT OR Apache-2.0; recorded in
# the license manifest) and already in Cargo.lock.
serde_json.workspace = true

[dev-dependencies]
# (serde_json is a normal dependency above, used by the dataset generator and
# by the model's serde round-trip tests.)

# Warm-query micro-benchmark for the optional cache (T-0033, Cat. 9). A
# dependency-free harness (`harness = false`) — deliberately not criterion, to
# avoid dragging criterion's large transitive tree through the license manifest
# for one micro-measurement. The same property is asserted in
# tests/cache_integration.rs so CI guards it without running the bench.
[[bench]]
name = "cache_warm_read"
harness = false
