[package]
name = "tck-runner"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "openCypher TCK (Gherkin) conformance runner for caerostris-db"
license = "MIT"
repository = "https://github.com/caerostris/caerostris-db"
publish = false

[dependencies]
gherkin.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
